feat: Add localization support and update project metadata
Integrates i18next for internationalization and adds Spanish language support. Updates project name and README to reflect the new version and clarifies setup instructions.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "excel-spreadsheet-translator(1.0)",
+  "name": "excel-sheet-translator1-.1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
